# outbox-python

./: CHANGELOG.md  README.md  pyproject.toml  release.config.js
.github/workflows/: ci.yaml
src/omnixys_outbox/: __init__.py  container.py  model.py  orm.py  processor.py  repository.py
src/outbox/: __init__.py  container.py  processor.py  repository.py
tests/: test_import.py
